test/visibility/only/innerModuleSharesName-topLevel.good
innerModuleSharesName-topLevel.chpl:10: error: cannot resolve symbol 'M', multiple symbols with that name in scope
